--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
-  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%), url('background.png');
+  background-image: url('background.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
