--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
-  background-image: url('background.png');
+  <img src="background.png" alt="Background Image" style="display:none;" />
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
